2007-10-16  Ian Turner <ian@zmanda.com>
	* device-src/device.c: Fix a compilation error in
	  device_set_startup_properties_from_config().

2007-10-16  Ian Turner <ian@zmanda.com>
	* device-src/device.c: Don't complain about problems setting
	  MAX_VOLUME_USAGE; do complain about problems setting
	  READ_BUFFER_SIZE.

2007-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-gnutar.c: Use GNUTAR.

2007-10-15  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/device.c: do not fall back to tape:/foo if the tape
	  device is not available (WANT_TAPE_DEVICE is not set)

2007-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-mtx.sh.in changer-src/chg-zd-mtx.sh.in
	  changer-src/chg-multi.sh.in: add missing definition of prefix

2007-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/protocol.c (s_repwait): return PA_FINISH on P_NAK.

2007-10-11  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/tape.m4: fix typo (have_MTIOCTOP -> HAVE_MTIOCTOP)

2007-10-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amflock-test.c common-src/amflock-lnlock.c: don't use
	  AMANDA_TMPDIR during build-time testing

2007-09-14  Dustin J. Mitchell <dustin@zmanda.com>
	* recover-src/uscan.l recover-src/extract_list.c 
	  recover-src/uparse.y recover-src/amrecover.h 
	  recover-src/help.c recover-src/set_commands.c: deprecate
	  'settape', add 'setdevice'
	* man/xml-source/amrecover.8.xml: corresponding doc update
	* example/amanda.conf.in: update comments in example config, 
	  change default value of amrecover_changer from the confusing
	  "/dev/null"

2007-10-09  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amflock-test.c: lock files in the cwd, rather than /tmp,
	  and pay attention to errors from unlink()

2007-10-09  Dustin J. Mitchell <dustin@zmanda.com>
	* gnulib/regenerate/regenerate gnulib/mkdtemp.c gnulib/mkdtemp.h
	  gnulib/gettimeofday.c gnulib/sys_time_.h gnulib/tempname.c